// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component should render initial layout 1`] = `
Array [
  <div
    className="outer-panel"
>
    <div
        className="panel-body"
    >
        <div
            className="title"
        >
            Food Order
        </div>
        <FoodList
            foods={
                Array [
                    Object {
                      "name": "food1",
                      "price": "100",
                    },
                    Object {
                      "name": "food2",
                      "price": "101",
                    },
                  ]
            }
        />
        <div
            className="panel-footer"
        >
            <Link
                replace={false}
                to="list_chefs"
            >
                <button
                    className="btn back-btn"
                >
                    Back
                </button>
            </Link>
            <Link
                onClick={[Function]}
                replace={false}
                to="checkout"
            >
                <button
                    className="btn next-btn"
                >
                    Submit Order
                </button>
            </Link>
        </div>
    </div>
</div>,
]
`;

exports[`Submit Button should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FoodOrder
    name="btn next-btn"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="panel-body"
>
        <div
                className="title"
        >
                Food Order
        </div>
        <FoodList
                foods={
                        Array [
                                Object {
                                  "name": "food1",
                                  "price": "100",
                                },
                                Object {
                                  "name": "food2",
                                  "price": "101",
                                },
                              ]
                }
        />
        <div
                className="panel-footer"
        >
                <Link
                        replace={false}
                        to="list_chefs"
                >
                        <button
                                className="btn back-btn"
                        >
                                Back
                        </button>
                </Link>
                <Link
                        onClick={[Function]}
                        replace={false}
                        to="checkout"
                >
                        <button
                                className="btn next-btn"
                        >
                                Submit Order
                        </button>
                </Link>
        </div>
</div>,
      "className": "outer-panel",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
>
            Food Order
</div>,
          <FoodList
            foods={
                        Array [
                                    Object {
                                      "name": "food1",
                                      "price": "100",
                                    },
                                    Object {
                                      "name": "food2",
                                      "price": "101",
                                    },
                                  ]
            }
/>,
          <div
            className="panel-footer"
>
            <Link
                        replace={false}
                        to="list_chefs"
            >
                        <button
                                    className="btn back-btn"
                        >
                                    Back
                        </button>
            </Link>
            <Link
                        onClick={[Function]}
                        replace={false}
                        to="checkout"
            >
                        <button
                                    className="btn next-btn"
                        >
                                    Submit Order
                        </button>
            </Link>
</div>,
        ],
        "className": "panel-body",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Food Order",
            "className": "title",
          },
          "ref": null,
          "rendered": "Food Order",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "foods": Array [
              Object {
                "name": "food1",
                "price": "100",
              },
              Object {
                "name": "food2",
                "price": "101",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                replace={false}
                to="list_chefs"
>
                <button
                                className="btn back-btn"
                >
                                Back
                </button>
</Link>,
              <Link
                onClick={[Function]}
                replace={false}
                to="checkout"
>
                <button
                                className="btn next-btn"
                >
                                Submit Order
                </button>
</Link>,
            ],
            "className": "panel-footer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="btn back-btn"
>
                  Back
</button>,
                "replace": false,
                "to": "list_chefs",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Back",
                  "className": "btn back-btn",
                },
                "ref": null,
                "rendered": "Back",
                "type": "button",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="btn next-btn"
>
                  Submit Order
</button>,
                "onClick": [Function],
                "replace": false,
                "to": "checkout",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Submit Order",
                  "className": "btn next-btn",
                },
                "ref": null,
                "rendered": "Submit Order",
                "type": "button",
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="panel-body"
>
          <div
                    className="title"
          >
                    Food Order
          </div>
          <FoodList
                    foods={
                              Array [
                                        Object {
                                          "name": "food1",
                                          "price": "100",
                                        },
                                        Object {
                                          "name": "food2",
                                          "price": "101",
                                        },
                                      ]
                    }
          />
          <div
                    className="panel-footer"
          >
                    <Link
                              replace={false}
                              to="list_chefs"
                    >
                              <button
                                        className="btn back-btn"
                              >
                                        Back
                              </button>
                    </Link>
                    <Link
                              onClick={[Function]}
                              replace={false}
                              to="checkout"
                    >
                              <button
                                        className="btn next-btn"
                              >
                                        Submit Order
                              </button>
                    </Link>
          </div>
</div>,
        "className": "outer-panel",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="title"
>
              Food Order
</div>,
            <FoodList
              foods={
                            Array [
                                          Object {
                                            "name": "food1",
                                            "price": "100",
                                          },
                                          Object {
                                            "name": "food2",
                                            "price": "101",
                                          },
                                        ]
              }
/>,
            <div
              className="panel-footer"
>
              <Link
                            replace={false}
                            to="list_chefs"
              >
                            <button
                                          className="btn back-btn"
                            >
                                          Back
                            </button>
              </Link>
              <Link
                            onClick={[Function]}
                            replace={false}
                            to="checkout"
              >
                            <button
                                          className="btn next-btn"
                            >
                                          Submit Order
                            </button>
              </Link>
</div>,
          ],
          "className": "panel-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Food Order",
              "className": "title",
            },
            "ref": null,
            "rendered": "Food Order",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "foods": Array [
                Object {
                  "name": "food1",
                  "price": "100",
                },
                Object {
                  "name": "food2",
                  "price": "101",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="list_chefs"
>
                  <button
                                    className="btn back-btn"
                  >
                                    Back
                  </button>
</Link>,
                <Link
                  onClick={[Function]}
                  replace={false}
                  to="checkout"
>
                  <button
                                    className="btn next-btn"
                  >
                                    Submit Order
                  </button>
</Link>,
              ],
              "className": "panel-footer",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <button
                    className="btn back-btn"
>
                    Back
</button>,
                  "replace": false,
                  "to": "list_chefs",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Back",
                    "className": "btn back-btn",
                  },
                  "ref": null,
                  "rendered": "Back",
                  "type": "button",
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <button
                    className="btn next-btn"
>
                    Submit Order
</button>,
                  "onClick": [Function],
                  "replace": false,
                  "to": "checkout",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit Order",
                    "className": "btn next-btn",
                  },
                  "ref": null,
                  "rendered": "Submit Order",
                  "type": "button",
                },
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
